Updated Energy CA2

--- a/YEAR 2 SEM 1 2A06/AIML ST1511/CA2/Energy Consumption/Energy.ipynb
+++ b/YEAR 2 SEM 1 2A06/AIML ST1511/CA2/Energy Consumption/Energy.ipynb
@@ -47,8 +47,7 @@
     "import seaborn as sns\n",
     "\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from statsmodels.tsa.stattools import kpss"
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
